--- a/travaux-pratiques.html
+++ b/travaux-pratiques.html
@@ -691,7 +691,7 @@ platformBrowserDynamic().bootstrapModule(AppModule); <b class="conum">(2)</b></c
 <p>Pour lancer le compilateur Typescript en mode surveillance des fichiers (les fichiers sources sont recompilés automatiquemen à chaque changement), on lance :</p>
 </div>
 <div class="paragraph">
-<p><code>tsc --watch</code></p>
+<p><code>tsc</code></p>
 </div>
 <div class="paragraph">
 <p>Installation d&#8217;un mini serveur HTTP</p>
@@ -756,7 +756,7 @@ this.ponies = [{ name: 'Fluttershy' }, { name: 'Rarity' }];
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-02-13 20:24:51 Paris, Madrid
+Last updated 2017-02-15 16:36:36 Paris, Madrid
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/github.min.css">
